# hybrid-agent

./: .env.example  README.md  brain.py  capabilities.py  cli.py  errors.py  executors.py  hybrid_agent.py  memory.py  pyproject.toml  router.py
callers/: __init__.py  cursor_sdk.py
examples/: cheap_agent.py  default_agent.py  list_models.py
tests/: test_brain.py  test_capabilities.py  test_cli.py  test_cursor_caller.py  test_executors.py  test_hybrid_agent.py  test_memory.py  test_router.py
