[project]
name = "hybrid-agent"
version = "0.1.0"
description = "Two-stage advisor/worker agent using Cursor SDK models only"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cursor-sdk>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["callers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
