[project]
name = "hybrid-agent"
version = "0.2.0"
description = "Brain router and two-stage advisor/worker agent using Cursor SDK models only"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cursor-sdk>=0.1.3",
]

[project.scripts]
brain = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "hybrid_agent",
    "brain",
    "cli",
    "capabilities",
    "executors",
    "router",
    "memory",
    "errors",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["callers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
